Update block name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "wp-carbonbadge",
+  "name": "carbonbadge-block",
   "version": "0.1.0",
   "description": "An interactive block with the Interactivity API",
   "author": "The WordPress Contributors",
