--- a/.github/workflows/save-to-releases.yml
+++ b/.github/workflows/save-to-releases.yml
@@ -3,7 +3,10 @@ name: Build release zip (save on Github)
 on:
     push:
         tags:
-            - '*'
+            - 'v*'
+    pull_request:
+        tags:
+            - "v*" 
 
 jobs:
     tag:
@@ -25,3 +28,11 @@ jobs:
                   files: ${{github.workspace}}/${{ github.event.repository.name }}.zip
               env:
                   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+            - name: WordPress Plugin Deploy
+                uses: nk-o/action-wordpress-plugin-deploy@master
+                env:
+                    SVN_PASSWORD: ${{ secrets.SVN_PASSWORD }}
+                    SVN_USERNAME: ${{ secrets.SVN_USERNAME }}
+                    SOURCE_DIR: dist/
+                    SLUG: carbonbadge-block
