--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "carbonbadge-block",
-	"version": "1.3.3",
+	"version": "1.3.4",
 	"description": "An interactive block with the Interactivity API",
 	"author": "The WordPress Contributors",
 	"license": "GPL-3.0-or-later",
@@ -10,6 +10,7 @@
 		"build": "wp-scripts build --experimental-modules",
 		"format": "wp-scripts format",
 		"lint:css": "wp-scripts lint-style",
+		"lint:css:fix": "wp-scripts lint-style --fix",
 		"lint:js": "wp-scripts lint-js",
 		"lint:js:fix": "wp-scripts lint-js --fix",
 		"packages-update": "wp-scripts packages-update",
@@ -20,11 +21,11 @@
 		"[^.]*"
 	],
 	"dependencies": {
-		"@wordpress/interactivity": "^6.2.0",
+		"@wordpress/interactivity": "^6.3.0",
 		"react": "^18.2.0"
 	},
 	"devDependencies": {
-		"@wordpress/prettier-config": "^4.2.0",
-		"@wordpress/scripts": "^28.2.0"
+		"@wordpress/prettier-config": "^4.3.0",
+		"@wordpress/scripts": "^28.3.0"
 	}
 }
